--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+# JDBC
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=spring
+spring.datasource.password=password
