--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=spring
 spring.datasource.password=password
+
+# Spring Data REST
+spring.data.rest.base-path=/api
+spring.data.rest.default-page-size=3
